--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="../justdoit119/project01/index.html" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 01</h4>
@@ -351,7 +351,7 @@
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="../justdoit119/project02/index.html" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 02</h4>
@@ -393,7 +393,7 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="#" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 03</h4>
