--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/website01.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-plus-circle"></i></a>
-                <a href="../justdoit119/project01/index.html" title="website link"><i class="icofont-link"></i></a>
+                <a href="project01/index.html" target="_blank" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 01</h4>
-                <p>보성여관</p>
+                <p>보성여관 리뉴얼</p>
               </div>
             </div>
           </div>
@@ -336,7 +336,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/logo1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Edit_logo1.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-plus-circle"></i></a>
+                <a href="assets/img/portfolio/logo1_guide.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-plus-circle"></i></a>
                 <!-- <a href="#" title="More Details"><i class="icofont-link"></i></a> -->
               </div>
               <div class="portfolio-info">
@@ -348,10 +348,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/website02.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a>
-                <a href="../justdoit119/project02/index.html" title="website link"><i class="icofont-link"></i></a>
+                <a href="project02/index.html" target="_blank" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 02</h4>
@@ -393,7 +393,7 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="website link"><i class="icofont-link"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 03</h4>
@@ -404,7 +404,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/logo3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-plus-circle"></i></a>
                 <!-- <a href="#" title="More Details"><i class="icofont-link"></i></a> -->
