--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+
+<!-- 파비콘 -->
+<link rel="icon" href="ico/png 파일 주소">
+
+<!-- 카카오 메타태그 정보 -->
+<meta property="og:image" content="assets/img/ps.png">
+<meta property="og:title" content="김건행의 포트폴리오">
+<meta property="og:description" content="안녕하세요. 김건행의 포트폴리오입니다.">
+
+
+
 </head>
 
 <body>
@@ -351,7 +363,7 @@
               <img src="assets/img/portfolio/website02.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a>
-                <a href="project02/index.html" target="_blank" title="More Details"><i class="icofont-link"></i></a>
+                <a href="project02/index.html" target="_blank" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 02</h4>
@@ -390,19 +402,19 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/website03.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a>
-                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+                <a href="assets/img/portfolio/website03.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a>
+                <a href="http://skin-skin8.haengnim11.cafe24.com/" target="_blank" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Website 03</h4>
-                <p>none</p>
+                <p>OZKIZ 리뉴얼</p>
               </div>
-            </div>
+            </div> 
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/logo3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -430,7 +442,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/banner3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -444,7 +456,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/banner4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
