--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <link rel="icon" href="ico/png 파일 주소">
 
 <!-- 카카오 메타태그 정보 -->
-<meta property="og:image" content="assets/img/ps.png">
+<meta property="og:image" content="assets/img/01.png">
 <meta property="og:title" content="김건행의 포트폴리오">
 <meta property="og:description" content="안녕하세요. 김건행의 포트폴리오입니다.">
 
