--- a/project02/index.html
+++ b/project02/index.html
@@ -38,8 +38,8 @@
             </div>
             <div>
                 <nav>
+                    <div class="hambuger"><span></span><span></span><span></span></div>
                     <ul class="Mm">
-                        <div><span></span><span></span><span></span></div>
                         <li class="Ml"><a href="">brand</a>
                             <ul class="Sm sm1">
                                 <li><a href="">도부 스토리</a></li>
