--- a/project01/sub3_.html
+++ b/project01/sub3_.html
@@ -152,7 +152,7 @@
                             <div class="left">
                                 <h3>관람 요금</h3>
                             </div>
-                            <div class="right">
+                            <div class="right Rtable">
                         <!-- 대문자 및 스타일 수정할것 -->
                                 <TABLE width="797" border="0" cellpadding="7" cellspacing="0">
                                     <TR>
