--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/website01.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-plus-circle"></i></a>
+                <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-plus-circle"></i></a> -->
                 <a href="project01/index.html" target="_blank" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
@@ -362,7 +362,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/website02.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a>
+                <!-- <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a> -->
                 <a href="project02/index.html" target="_blank" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
@@ -404,7 +404,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/website03.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/website03.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a>
+                <!-- <a href="assets/img/portfolio/website03.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a> -->
                 <a href="http://skin-skin8.haengnim11.cafe24.com/" target="_blank" title="website link"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
@@ -418,7 +418,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/logo3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-plus-circle"></i></a>
+                <a href="assets/img/portfolio/logo3_guide.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-plus-circle"></i></a>
                 <!-- <a href="#" title="More Details"><i class="icofont-link"></i></a> -->
               </div>
               <div class="portfolio-info">
